LPS-115616 Fix spacing between fields data engine - form builde

--- a/modules/apps/data-engine/data-engine-taglib/src/main/resources/META-INF/resources/data_layout_builder/css/components/_ddm_form_builder.scss
+++ b/modules/apps/data-engine/data-engine-taglib/src/main/resources/META-INF/resources/data_layout_builder/css/components/_ddm_form_builder.scss
@@ -1,5 +1,3 @@
-$baseline: 24px;
-
 .data-engine-form-builder {
 	> .sheet {
 		margin-top: 0;
@@ -27,28 +25,76 @@ $baseline: 24px;
 				padding: 0;
 			}
 
-			.fields-group {
-				margin-left: 16px;
-				width: calc(100% - 16px);
+			.fields-group, .fields-group.hovered {
+				margin: 0 6px;
+				width: calc(100% - 12px);
+			}
+		}
+	}
+
+	.ddm-form-builder {
+		&.container {
+			padding: 0 21px;
+		}
+
+		.ddm-drag {
+			padding: 2px 0 6px;
+
+			&.dragging {
+				background-color: #fff;
+				padding: 2px 6px 6px !important;
 			}
 		}
 
 		.ddm-field-container {
-			background-color: #fff;
+			margin: 0;
+			padding: 0 6px;
 
+			&.fields-group, &.fields-group .ddm-drag.dragging {
+				padding: 0 10px !important;
+			}
+			
 			&.dragging {
-				border-radius: 0;
+				background-color: transparent;
+				border-radius: 4px;
+			}
+
+			&, &.dragging.hovered, &.dragging.selected {
+				border-radius: 0 4px 4px;
+			}
+
+			&.hovered {
+				border-width: 2px;
+    			margin: 0;
+			}
+		}
+
+		.placeholder.row .ddm-target {
+			&.targetOver,
+			&.target-over {
+				background-color: transparent;
+				border: 0 none;
+				border-radius: unset;
+			}
+
+			&.targetOver:after,
+			&.target-over:after {
+				background-color: #b3cdff;
+				border-radius: 4px;
+				bottom: 0;
+				content: '';
+				height: 4px;
+				margin: auto;
+				position: absolute;
+				top: 0;
+				width: calc(100% - 4px);
 			}
 		}
 	}
 
-	.ddm-form-builder.container {
-		padding: 0 24px;
-	}
-
 	.ddm-empty-page {
-		margin: $baseline !important;
-		width: calc(100% - #{$baseline * 2}) !important;
+		margin: 24px !important;
+		width: calc(100% - #{24px * 2}) !important;
 	}
 
 	.form-builder-layout {
